Dodanie przycisku do dodania oferty.

--- a/src/app/dodawanie-oferty/dodawanie-oferty.component.html
+++ b/src/app/dodawanie-oferty/dodawanie-oferty.component.html
@@ -73,6 +73,7 @@
 
 
     <mat-slide-toggle>Czy wyróżnić ofertę?</mat-slide-toggle>
+    <button mat-raised-button color="primary">Dodaj ofertę</button>
 
 
   </form>
