--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,30 +1,7 @@
-@import '~@angular/material/theming';
-@import '~@covalent/core/theming/all-theme';
-
-$typography: mat-typography-config(
-  $font-family: 'Roboto, monospace',
-  $headline: mat-typography-level(32px, 48px, 700)
-);
-
-$material-design-icons-font-path: "~material-design-icons-iconfont/dist/fonts/";
-@import "~material-design-icons-iconfont/dist/material-design-icons";
-
-@include mat-core();
-
-$primary: mat-palette($mat-brown, 600, 400, 800);
-$accent:  mat-palette($mat-amber, 500, 300, 700);
-$warn:    mat-palette($mat-red, 500, 300, 900);
-
-// Create the theme object (a Sass map containing all of the palettes).
-$theme: mat-light-theme($primary, $accent, $warn);
-
-@include angular-material-theme($theme);
-@include covalent-theme($theme);
-
-body {
-  margin: 0;
-}
-
-.mat-card, .mat-expansion-reject-panel {
-  margin: 20px 100px 0 100px;
+// Adjust your logo position
+.mat-icon {
+  &.mat-icon-logo {
+    position: relative;
+    top: -4px;
+  }
 }
