Poprawki w formularzu wyszukiwania zaawansowanego

--- a/src/app/strona-glowna/strona-glowna.component.html
+++ b/src/app/strona-glowna/strona-glowna.component.html
@@ -50,7 +50,7 @@
       </div>
 
       <button mat-raised-button color="primary">Szukaj</button>
-      <button mat-raised-button color="accent">Wyszukiwanie zaawansowane</button>
+      <a mat-raised-button routerLink="/oferta/wyszukiwanie" color="accent">Wyszukiwanie zaawansowane</a>
     </form>
   </mat-card-content>
 </mat-card>
