Poprawienie formularza rejestracji.

--- a/src/app/rejestracja/rejestracja.component.html
+++ b/src/app/rejestracja/rejestracja.component.html
@@ -3,63 +3,54 @@
   <mat-card-content>Ten formularz pozwala na zarejestrowanie się do serwisu.</mat-card-content>
 </mat-card>
 <mat-card>
-  <form class="example-form">
-    <mat-form-field class="example-full-width">
-      <input matInput placeholder="Login">
-      <mat-hint>Wpisz login!</mat-hint>
-    </mat-form-field>
-    <br>
-    <mat-form-field class="example-full-width">
-      <input matInput placeholder="Hasło">
-      <mat-hint>Wpisz hasło!</mat-hint>
-    </mat-form-field>
-    <br>
-    <mat-form-field class="example-full-width">
-      <input matInput placeholder="Powtórz Hasło">
-      <mat-hint>Potwierdź hasło!</mat-hint>
-    </mat-form-field>
-    <br>
-    <mat-form-field class="example-full-width">
-      <input matInput placeholder="Adres e-mail">
-      <mat-hint>Wpisz e-mail!</mat-hint>
-    </mat-form-field>
-    <br>
-    <mat-form-field class="example-full-width">
-      <input matInput placeholder="Imię">
-      <mat-hint>Wpisz imię!</mat-hint>
-    </mat-form-field>
-    <br>
-    <mat-form-field class="example-full-width">
-      <input matInput placeholder="Nazwisko">
-      <mat-hint>Wpisz nazwisko!</mat-hint>
-    </mat-form-field>
-    <br>
-    <mat-form-field class="example-full-width">
-      <input matInput placeholder="Data urodzenia">
-      <mat-hint>Wpisz datę urodzenia!</mat-hint>
-    </mat-form-field>
-    <br>
-    <mat-form-field class="example-full-width">
-      <input matInput placeholder="Województwo">
-      <mat-hint>Wpisz województwo!</mat-hint>
-    </mat-form-field>
-    <br>
-    <mat-form-field class="example-full-width">
-      <input matInput placeholder="Miejscowość">
-      <mat-hint>Wpisz miejscowość!</mat-hint>
-    </mat-form-field>
-    <br>
-    <mat-form-field class="example-full-width">
-      <input matInput placeholder="Ulica">
-      <mat-hint>Wpisz ulicę!</mat-hint>
-    </mat-form-field>
-    <br>
-    <mat-form-field class="example-full-width">
-      <input matInput placeholder="Nr telefonu">
-      <mat-hint>Wpisz nr telefonu!</mat-hint>
-    </mat-form-field>
-    <br><br>
-    <button mat-raised-button color="accent">Zarejestruj</button>
-  </form>
-
+  <mat-card-content>
+    <form class="example-form">
+      <mat-form-field class="example-full-width">
+        <input matInput placeholder="Login">
+        <mat-hint>Wpisz login!</mat-hint>
+      </mat-form-field>
+      <mat-form-field class="example-full-width">
+        <input matInput type="password" placeholder="Hasło">
+        <mat-hint>Wpisz hasło!</mat-hint>
+      </mat-form-field>
+      <mat-form-field class="example-full-width">
+        <input matInput type="password" placeholder="Powtórz Hasło">
+        <mat-hint>Potwierdź hasło!</mat-hint>
+      </mat-form-field>
+      <mat-form-field class="example-full-width">
+        <input matInput placeholder="Adres e-mail">
+        <mat-hint>Wpisz e-mail!</mat-hint>
+      </mat-form-field>
+      <mat-form-field class="example-full-width">
+        <input matInput placeholder="Imię">
+        <mat-hint>Wpisz imię!</mat-hint>
+      </mat-form-field>
+      <mat-form-field class="example-full-width">
+        <input matInput placeholder="Nazwisko">
+        <mat-hint>Wpisz nazwisko!</mat-hint>
+      </mat-form-field>
+      <mat-form-field class="example-full-width">
+        <input matInput placeholder="Data urodzenia">
+        <mat-hint>Wpisz datę urodzenia!</mat-hint>
+      </mat-form-field>
+      <mat-form-field class="example-full-width">
+        <input matInput placeholder="Województwo">
+        <mat-hint>Wpisz województwo!</mat-hint>
+      </mat-form-field>
+      <mat-form-field class="example-full-width">
+        <input matInput placeholder="Miejscowość">
+        <mat-hint>Wpisz miejscowość!</mat-hint>
+      </mat-form-field>
+      <mat-form-field class="example-full-width">
+        <input matInput placeholder="Ulica">
+        <mat-hint>Wpisz ulicę!</mat-hint>
+      </mat-form-field>
+      <mat-form-field class="example-full-width">
+        <input matInput placeholder="Nr telefonu">
+        <mat-hint>Wpisz nr telefonu!</mat-hint>
+      </mat-form-field>
+      <br><br>
+      <button mat-raised-button color="accent">Zarejestruj</button>
+    </form>
+  </mat-card-content>
 </mat-card>
