--- a/src/app/zglaszanie-uzytkownika/zglaszanie-uzytkownika.component.html
+++ b/src/app/zglaszanie-uzytkownika/zglaszanie-uzytkownika.component.html
@@ -1,31 +1,31 @@
 <mat-card>
   <mat-card-title>Zgłoś użytkownika</mat-card-title>
+  <mat-card-content>
+    <form class="example-form">
+      <mat-form-field>
+        <mat-select placeholder="Zgłoś: adriik" disabled="disable">
+          <mat-option>adrian</mat-option>
+          <mat-option>michal</mat-option>
+          <mat-option>przemek</mat-option>
+          <mat-option>piotrek</mat-option>
+        </mat-select>
+      </mat-form-field>
 
-  <mat-form-field>
-    <mat-select placeholder="Zgłoś: adriik" disabled="disable">
-      <mat-option>adrian</mat-option>
-      <mat-option>michal</mat-option>
-      <mat-option>przemek</mat-option>
-      <mat-option>piotrek</mat-option>
-    </mat-select>
-  </mat-form-field>
+      <mat-form-field class="example-full-width">
+        <mat-select placeholder="Powód zgłoszenia">
+          <mat-option>Niecenzuralne treści</mat-option>
+          <mat-option>Niewywiązanie się z umowy</mat-option>
+          <mat-option>Kradzież</mat-option>
+        </mat-select>
+      </mat-form-field>
 
-  <form class="example-form">
-  <mat-form-field>
-    <mat-select placeholder="Powód zgłoszenia">
-      <mat-option>Niecenzuralne treści</mat-option>
-      <mat-option>Niewywiązanie się z umowy</mat-option>
-      <mat-option>Kradzież</mat-option>
-    </mat-select>
-  </mat-form-field>
-  </form>
+      <mat-form-field class="example-full-width">
+        <textarea matInput placeholder="Treść wiadomości" matTextareaAutosize matAutosizeMinRows="4"
+                  matAutosizeMaxRows="20"></textarea>
+      </mat-form-field>
+    </form>
 
-  <form class="example-form">
-    <mat-form-field class="terscWiadomosci">
-  <textarea matInput placeholder="Treść wiadomości" matTextareaAutosize matAutosizeMinRows="4"
-            matAutosizeMaxRows="20"></textarea>
-    </mat-form-field>
-  </form>
-
-  <button mat-raised-button>Anuluj</button> <button mat-raised-button color="primary">Zgłoś</button>
+    <button mat-raised-button>Anuluj</button>
+    <button mat-raised-button color="primary">Zgłoś</button>
+  </mat-card-content>
 </mat-card>
