--- a/src/app/zglaszanie-transakcji/zglaszanie-transakcji.component.html
+++ b/src/app/zglaszanie-transakcji/zglaszanie-transakcji.component.html
@@ -1,49 +1,27 @@
 <mat-card>
-  <form class="example-form">
-    <table class="example-full-width" cellspacing="0">
-      <tr>
-        <td colspan="2" align="center">
-          <mat-card-title class="example-full-width">Formularz zgłaszania transakcji</mat-card-title>
-        </td>
-      </tr>
-      <br><br>
-      <tr>
-        <td colspan="2" align="center">
-          <mat-form-field class="tekstUwagi">
-            <input matInput placeholder="Numer transakcji:" disabled value="15" style="text-align: center">
-          </mat-form-field>
-        </td>
-      </tr>
-      <br>
-      <tr>
-        <td colspan="2" align="center">
-          <mat-card-content> Wybierz typ zgłaszanej uwagi:</mat-card-content>
-        </td>
-      </tr>
-      <tr>
-        <td colspan="2" align="center">
-          <mat-form-field class="listaRozwijana">
-            <mat-select [(value)]="selected">
-              <mat-option value="opcja1">Niezastosowanie się do warunków transakcji przez Kierowcę</mat-option>
-              <mat-option value="opcja2">Niezastosowanie się do warunków transakcji przez Nadawcę</mat-option>
-              <mat-option value="opcja3">Inne</mat-option>
-            </mat-select>
-          </mat-form-field>
-          <p>Wybrałeś: {{selected}}
-        </td>
-      </tr>
-      <br>
-      <tr>
-        <td colspan="2" align="center">
-          <mat-form-field class="tekstUwagi">
-            <textarea matInput placeholder="Treść uwagi:"  rows="10"></textarea>
-          </mat-form-field>
-        </td>
-      </tr>
-      <tr>
-        <td align="center"><button mat-raised-button style="width:80%">Anuluj</button></td>
-        <td align="center"><button mat-raised-button color="primary" style="width:80%">Wyślij</button></td>
-      </tr>
-    </table>
-  </form>
+  <mat-card-title class="example-full-width">Formularz zgłaszania transakcji</mat-card-title>
+  <mat-card-content>
+    <form class="example-form">
+
+      <mat-form-field class="example-full-width">
+        <input matInput placeholder="Numer transakcji:" disabled value="15">
+      </mat-form-field>
+
+      <mat-form-field class="example-full-width">
+        <mat-select [(value)]="selected" placeholder="Typ zgłaszanej uwagi">
+          <mat-option value="opcja1">Niezastosowanie się do warunków transakcji przez Kierowcę</mat-option>
+          <mat-option value="opcja2">Niezastosowanie się do warunków transakcji przez Nadawcę</mat-option>
+          <mat-option value="opcja3">Inne</mat-option>
+        </mat-select>
+        <mat-hint>Wybierz typ zgłaszanej uwagi:</mat-hint>
+      </mat-form-field>
+      <p>Wybrałeś: {{selected}}</p>
+
+      <mat-form-field class="example-full-width">
+        <textarea matInput placeholder="Treść uwagi:" rows="10"></textarea>
+      </mat-form-field>
+      <button mat-raised-button>Anuluj</button>
+      <button mat-raised-button color="primary">Wyślij</button>
+    </form>
+  </mat-card-content>
 </mat-card>
