--- a/src/app/edytowania-zapoznania/edytowania-zapoznania.component.html
+++ b/src/app/edytowania-zapoznania/edytowania-zapoznania.component.html
@@ -1,27 +1,13 @@
 <mat-card>
-  <form class="example-form">
+  <mat-card-title class="example-full-width">Formularz edycji zapoznania się z serwisem</mat-card-title>
+  <mat-card-content>
+    <form class="example-form">
+      <mat-form-field class="example-full-width">
+        <textarea matInput placeholder="Edytuj opis serwisu:" rows="10"></textarea>
+      </mat-form-field>
 
-    <table class="example-full-width" cellspacing="0">
-
-      <tr>
-        <td colspan="2" align="center">
-          <mat-card-title class="example-full-width">Formularz edycji zapoznania się z serwisem</mat-card-title>
-        </td>
-      </tr>
-
-      <tr>
-        <td colspan="2" align="center">
-          <mat-form-field class="tekstEdycji">
-            <textarea matInput placeholder="Edytuj opis serwisu:" rows="10"></textarea>
-          </mat-form-field>
-        </td>
-      </tr>
-
-      <tr>
-        <td align="center" style="width: 50%"><button mat-raised-button style="width:80%">Anuluj</button></td>
-        <td align="center" style="width: 50%"><button mat-raised-button color="primary" style="width:80%">Zatwierdź</button></td>
-      </tr>
-    </table>
-
-  </form>
+      <button mat-raised-button>Anuluj</button>
+      <button mat-raised-button color="primary">Zatwierdź</button>
+    </form>
+  </mat-card-content>
 </mat-card>
