--- a/src/app/ocena-transakcji/ocena-transakcji.component.html
+++ b/src/app/ocena-transakcji/ocena-transakcji.component.html
@@ -1,51 +1,26 @@
 <mat-card>
-  <form class="example-form">
-    <table class="example-full-width" cellspacing="0">
-      <tr>
-        <td colspan="2" align="center">
-          <mat-card-title class="example-full-width">
-            Oceń transakcję
-          </mat-card-title>
-        </td>
-      </tr>
-      <tr>
-        <td colspan="2" align="center">
-          <mat-card-subtitle class="example-full-width">
-            Tytuł oferty / Miasto początkowe - Miasto docelowe
-          </mat-card-subtitle>
-        </td>
-      </tr>
-      <tr>
-        <br>
-      </tr>
-      <tr>
-        <td colspan="2" align="center">
-          <mat-card-title class="example-full-width">
-            Ocena
-          </mat-card-title>
-      </tr>
-      <tr>
-        <br>
-      </tr>
-      <tr>
-        <td colspan="2" align="center">[Gwiazdki w formie graficznej]</td>
-      </tr>
-      <tr>
-        <br>
-      </tr>
-      <tr>
-        <td colspan="2" align="center">
-          <mat-form-field class="example-full-width">
+  <mat-card-title>
+    Oceń transakcję
+  </mat-card-title>
+  <mat-card-subtitle class="example-full-width">
+    Tytuł oferty / Miasto początkowe - Miasto docelowe
+  </mat-card-subtitle>
+  <mat-card-content>
+    <form class="example-form">
+      <p>Ocena</p>
+      <div>
+        <mat-icon class="rate rate_selected">star</mat-icon>
+        <mat-icon class="rate rate_selected">star</mat-icon>
+        <mat-icon class="rate rate_selected">star</mat-icon>
+        <mat-icon class="rate">star</mat-icon>
+        <mat-icon class="rate">star</mat-icon>
+      </div>
+      <mat-form-field class="example-full-width">
             <textarea matInput placeholder="Komentarz" matTextareaAutosize matAutosizeMinRows="2"
-                      matAutosizeMaxRows="5">
-            </textarea> <!-- Rozszerzyć do szerokości kolumny -->
-          </mat-form-field>
-        </td>
-      </tr>
-      <tr>
-        <td align="center"><button mat-raised-button style="width:100%">Anuluj</button></td>
-        <td align="center"><button mat-raised-button color="primary" style="width:100%">Oceń</button></td>
-      </tr>
-    </table>
-  </form>
+                      matAutosizeMaxRows="5"></textarea>
+      </mat-form-field>
+      <button mat-raised-button>Anuluj</button>
+      <button mat-raised-button color="primary">Oceń</button>
+    </form>
+  </mat-card-content>
 </mat-card>
