--- a/src/app/panel-uzytkownika/panel-uzytkownika.component.html
+++ b/src/app/panel-uzytkownika/panel-uzytkownika.component.html
@@ -3,6 +3,7 @@
     <mat-nav-list>
       <a mat-list-item routerLink="/logowanie"> Logowanie </a>
       <a mat-list-item routerLink="/oferta/dodaj"> Dodaj ofertę </a>
+      <a mat-list-item routerLink="/oferta/edytuj"> Edytuj ofertę </a>
       <a mat-list-item routerLink="/uzytkownik/edytuj_profil"> Edytuj profil </a>
       <a mat-list-item routerLink="/wiadomosc/wyslij"> Napisz wiadomość </a>
       <a mat-list-item routerLink="/transakcja/ocen"> Oceń transakcję </a>
