--- a/src/theme.scss
+++ b/src/theme.scss
@@ -6,7 +6,7 @@ $typography: mat-typography-config(
   $headline: mat-typography-level(32px, 48px, 700)
 );
 
-$material-design-icons-font-path: "~material-design-icons-iconfont/dist/fonts/";
+$material-design-icons-font-path: "../node_modules/material-design-icons-iconfont/dist/fonts/";
 @import "~material-design-icons-iconfont/dist/material-design-icons";
 @import "~@covalent/core/common/platform.css";
 
