--- a/src/app/components/logowanie/logowanie.component.html
+++ b/src/app/components/logowanie/logowanie.component.html
@@ -6,8 +6,8 @@
   <mat-card-content>
     <form class="example-form" [formGroup]="logowanieForm">
       <mat-form-field class="example-full-width">
-        <input matInput type="email" placeholder="Email" formControlName="email">
-        <mat-hint>Wpisz email!</mat-hint>
+        <input matInput placeholder="Login" formControlName="login">
+        <mat-hint>Wpisz login!</mat-hint>
       </mat-form-field>
       <mat-form-field class="example-full-width">
         <input matInput type="password" placeholder="Hasło" formControlName="haslo">
