UC: Zgłoś użytkownika - wdrożenie zgłaszania użytkowników i przeglądania zgłoszeń w panelu administratora

--- a/src/app/components/panel-administratora/panel-administratora.component.html
+++ b/src/app/components/panel-administratora/panel-administratora.component.html
@@ -1,8 +1,9 @@
 <mat-card>
   <mat-card-content>
     <mat-nav-list>
-      <a mat-list-item routerLink="/administrator/edytuj_opis"> Edytuj zapoznanie się z serwisem </a>
-      <a mat-list-item routerLink="/regulamin/dodaj"> Dodaj regulamin </a>
+      <!--<a mat-list-item routerLink="/administrator/edytuj_opis"> Edytuj zapoznanie się z serwisem </a>-->
+      <!--<a mat-list-item routerLink="/regulamin/dodaj"> Dodaj regulamin </a>-->
+      <a mat-list-item routerLink="/administrator/zgloszeniauzytkownikow"> Przejrzyj zgłoszenia użytkowników </a>
     </mat-nav-list>
   </mat-card-content>
 </mat-card>
