--- a/src/app/components/zglaszanie-uzytkownika/zglaszanie-uzytkownika.component.html
+++ b/src/app/components/zglaszanie-uzytkownika/zglaszanie-uzytkownika.component.html
@@ -1,31 +1,24 @@
 <mat-card>
   <mat-card-title>Zgłoś użytkownika</mat-card-title>
   <mat-card-content>
-    <form class="example-form">
+    <form class="example-form" [formGroup]="zglosUzytkownikaForm">
       <mat-form-field>
-        <mat-select placeholder="Zgłoś: adriik" disabled="disable">
-          <mat-option>adrian</mat-option>
-          <mat-option>michal</mat-option>
-          <mat-option>przemek</mat-option>
-          <mat-option>piotrek</mat-option>
-        </mat-select>
+        <input matInput placeholder="Login użytkownika" disabled [value]="login"/>
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
-        <mat-select placeholder="Powód zgłoszenia">
-          <mat-option>Niecenzuralne treści</mat-option>
-          <mat-option>Niewywiązanie się z umowy</mat-option>
-          <mat-option>Kradzież</mat-option>
+        <mat-select placeholder="Powód zgłoszenia" formControlName="powod">
+          <mat-option *ngFor="let powod of powody" [value]="powod">
+            {{ powod.value }}
+          </mat-option>
         </mat-select>
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
         <textarea matInput placeholder="Treść wiadomości" matTextareaAutosize matAutosizeMinRows="4"
-                  matAutosizeMaxRows="20"></textarea>
+                  matAutosizeMaxRows="20" formControlName="tresc"></textarea>
       </mat-form-field>
+      <button mat-raised-button color="primary" (click)="zglos()">Zgłoś</button>
     </form>
-
-    <button mat-raised-button>Anuluj</button>
-    <button mat-raised-button color="primary">Zgłoś</button>
   </mat-card-content>
 </mat-card>
