--- a/src/app/components/panel-uzytkownika/panel-uzytkownika.component.html
+++ b/src/app/components/panel-uzytkownika/panel-uzytkownika.component.html
@@ -3,7 +3,7 @@
     <mat-nav-list>
       <a mat-list-item *ngIf="zalogowanyUzytkownik" [routerLink]="['/uzytkownik/profil/', zalogowanyUzytkownik.login]">
         Pokaż profil </a>
-      <a mat-list-item routerLink="/oferta/dodaj"> Dodaj ofertę </a>
+      <a mat-list-item routerLink="/oferta/wystaw"> Wystaw ofertę </a>
       <!--<a mat-list-item routerLink="/oferta/edytuj"> Edytuj ofertę </a>-->
       <a mat-list-item routerLink="/uzytkownik/edytuj_profil"> Edytuj profil </a>
       <!--<a mat-list-item routerLink="/wiadomosc/wyslij"> Napisz wiadomość </a>-->
