UC: Przejrzyj szczegóły oferty - Filtrowanie atrybutów oferty na stronie przeglądania oferty i przekierowanie do oferty po dodaniu

--- a/src/app/components/dodawanie-oferty/dodawanie-oferty.component.html
+++ b/src/app/components/dodawanie-oferty/dodawanie-oferty.component.html
@@ -67,11 +67,11 @@
         <div flex-gt-xs="50">
           <mat-form-field class="example-full-width">
             <mat-select placeholder="Miasto początkowe" required formControlName="miastoPoczatkowe">
-              <mat-option value="1">Warszawa</mat-option>
-              <mat-option value="2">Kraków</mat-option>
-              <mat-option value="3">Pruszków</mat-option>
-              <mat-option value="4">Halinów</mat-option>
-              <mat-option value="5">Ostrów Mazowiecka</mat-option>
+              <mat-option value="Warszawa">Warszawa</mat-option>
+              <mat-option value="Kraków">Kraków</mat-option>
+              <mat-option value="Pruszków">Pruszków</mat-option>
+              <mat-option value="Halinów">Halinów</mat-option>
+              <mat-option value="Ostrów Mazowiecka">Ostrów Mazowiecka</mat-option>
             </mat-select>
             <mat-hint>Wybierz jedno z miast występujących na liście</mat-hint>
           </mat-form-field>
@@ -79,11 +79,11 @@
         <div flex-gt-xs="50">
           <mat-form-field class="example-full-width">
             <mat-select placeholder="Miasto docelowe" required formControlName="miastoDocelowe">
-              <mat-option value="1">Warszawa</mat-option>
-              <mat-option value="2">Kraków</mat-option>
-              <mat-option value="3">Pruszków</mat-option>
-              <mat-option value="4">Halinów</mat-option>
-              <mat-option value="5">Ostrów Mazowiecka</mat-option>
+              <mat-option value="Warszawa">Warszawa</mat-option>
+              <mat-option value="Kraków">Kraków</mat-option>
+              <mat-option value="Pruszków">Pruszków</mat-option>
+              <mat-option value="Halinów">Halinów</mat-option>
+              <mat-option value="Ostrów Mazowiecka">Ostrów Mazowiecka</mat-option>
             </mat-select>
             <mat-hint>Wybierz jedno z miast występujących na liście</mat-hint>
           </mat-form-field>
